--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^3.10.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^5.3.19",
+    "three": "^0.126.1",
+    "typescript": "^4.2.3",
+    "use-sound": "^2.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
